# Claude_Code_agentic_coding

./: .gitignore  ARCHITECTURE_8.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: agf-security-reviewer.md  integration-checker.md  planner-architect.md  supervisor.md  verifier.md  worker.md
.claude/orchestrator_code/: __init__.py  conflict.py  context.py  contracts.py  dag.py  dashboard.py  environment.py  git.py  mailbox.py  monitoring.py  risk.py  state.py  tasks.py  tmux.py  verify.py  workers_view.py  worktree.py
.claude/skills/: orchestrate.md
.claude/skills/orchestrate/: SKILL.md
contracts/: calculator_protocol.py  formatter_protocol.py
src/claude_orchestrator/: __init__.py  cli.py
src/claude_orchestrator/adapters/: __init__.py  base.py  express.py  fastapi.py  generic.py
src/claude_orchestrator/core/: __init__.py  conflict.py  contracts.py  dag.py  environment.py  risk.py  state.py
src/claude_orchestrator/integrator/: __init__.py  merge.py  regions.py
src/claude_orchestrator/schemas/: __init__.py  config.py  status.py  tasks.py
src/claude_orchestrator/utils/: __init__.py  git.py  tmux.py
src/claude_orchestrator/verification/: __init__.py  boundaries.py  churn.py  runner.py
src/claude_orchestrator/worktree/: isolation.py  manager.py
templates/: execution-plan.md.j2  tasks.yaml.j2
tests/e2e_demo/: __init__.py  calculator.py  formatter.py  main.py  test_calculator.py  test_formatter.py  test_main.py
tests/integration/: __init__.py  test_worktree.py
tests/unit/: __init__.py  test_boundaries.py  test_conflict.py  test_dag.py  test_risk.py
